--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 <body>
   <main>
     <h1>Hello, world</h1>
+    <div>
+      this is a <button>button</button>, and this is a <button class='-cta'>CTA button</button>
+    </div>
 
   </main>
 </body>
