--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,21 @@
       }
     }
     .flex {
-      display: flex; flex-direction: row; gap: 1rem; flex-wrap: wrap;
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      flex-wrap: wrap;
 
-      &.-col {flex-direction: column; gap: 0}
+      &.-col {
+        flex-direction: column;
+        gap: 0
+      }
     }
-    [type="range"] {max-width: 45%}
+
+    .wrapper:has([type=radio]),
+    .wrapper:has([type=checkbox]) {
+      width: min-content;
+    }
 
   </style>
 </head>
@@ -204,17 +214,17 @@
          <dt>radio buttons</dt>
            <dd class="flex">
 
-             <div>
+             <div class="wrapper">
                <input type='radio' name='radio-test' id='radio-test-1'>
                <label for='radio-test-1'>Red</label>
              </div>
 
-             <div>
+             <div class="wrapper">
                <input type='radio' name='radio-test' id='radio-test-2'>
                <label for='radio-test-2'>Green</label>
              </div>
 
-             <div>
+             <div class="wrapper">
                <input type='radio' name='radio-test' id='radio-test-3' checked>
                <label for='radio-test-3'>Blue</label>
              </div>
@@ -223,30 +233,30 @@
 
          <dt>checkbox</dt>
            <dd class="flex">
-             <div>
+             <div class="wrapper">
                <input type='checkbox' name='checkbox-1' id='checkbox-1'>
                <label for='checkbox-1'>Cats</label>
              </div>
 
-             <div>
+             <div class="wrapper">
                <input type='checkbox' name='checkbox-2' id='checkbox-2' checked>
                <label for='checkbox-2'>Dogs</label>
              </div>
 
-             <div>
+             <div class="wrapper">
                <input type='checkbox' name='checkbox-3' id='checkbox-3'>
                <label for='checkbox-3'>Turtles</label>
              </div>
            </dd>
 
            <dt>color</dt>
-             <dd clas="flex">
+             <dd class="flex">
                <input type='color' id="my-color" value="#a763e8">
                <label for='my-color'>Choose a color</label>
              </dd>
 
            <dt>date</dt>
-             <dd clas="flex">
+             <dd class="flex">
                <label for="date-start">Start date:</label>
 
              <input
@@ -260,7 +270,8 @@
 
 
            <dt>range</dt>
-             <dd class="flex">
+             <dd class="flex -col">
+               <label for="cowbell">Cowbell</label>
                <input
                  type="range"
                  id="cowbell"
@@ -268,14 +279,13 @@
                  min="0"
                  max="100"
                  value="65" />
-               <label for="cowbell">Cowbell</label>
              </dd>
 
 
            <dt>select</dt>
              <dd>
                <label for="standard-select">Standard Select</label>
-               <div class="select">
+               <div class="select wrapper">
                  <select id="standard-select">
                    <option value="Option 1">Option 1</option>
                    <option value="Option 2">Option 2</option>
@@ -290,7 +300,7 @@
              </dd>
 
            <dt>text</dt>
-             <dd clas="flex">
+             <dd class="flex wrapper">
                <label for="first-name">First name:</label>
 
              <input
